objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Email_Error_Description_TXT__c</fullName>
        <label>Email Error Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enrichment_Receive_Date_Time__c</fullName>
        <label>Enrichment Receive Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enrichment_XML_Payload__c</fullName>
        <description>The XML payload received from ECRM</description>
        <label>Enrichment XML Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Details_Urban_Science__c</fullName>
        <label>Error Details Urban Science</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EvergageEngagementTrend__c</fullName>
        <description>Engagement trend based on activity</description>
        <label>Evergage Eng. Trend</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EvergageEngagement__c</fullName>
        <description>Engagement score based on activity</description>
        <label>Evergage Engagement</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EvergageFilters__c</fullName>
        <description>Evergage matching filters</description>
        <label>Evergage Filters</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EvergageFirstActivity__c</fullName>
        <description>First activity with application</description>
        <label>Evergage First Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EvergageLastActivity__c</fullName>
        <description>Last activity with application</description>
        <label>Evergage Last Visit</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EvergageLink__c</fullName>
        <description>Link to the Evergage page</description>
        <label>Evergage Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Evergage_acura_EngagementTrend__c</fullName>
        <description>Engagement trend based on activity</description>
        <label>Evergage Eng. Trend (Production - Acu)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evergage_acura_Engagement__c</fullName>
        <description>Engagement score based on activity</description>
        <label>Evergage Engagement (Production - Acu)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evergage_acura_Filters__c</fullName>
        <description>Evergage matching filters</description>
        <label>Evergage Filters (Production - Acu)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evergage_acura_FirstActivity__c</fullName>
        <description>First activity with application</description>
        <label>Evergage First Visit (Production - Acu)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evergage_acura_LastActivity__c</fullName>
        <description>Last activity with application</description>
        <label>Evergage Last Visit (Production - Acu)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evergage_acura_Link__c</fullName>
        <description>Link to the Evergage page</description>
        <label>Evergage Link (Production - Acu)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Evergage_acura_cert_EngagementTrend__c</fullName>
        <description>Engagement trend based on activity</description>
        <label>Evergage Eng. Trend (Production - Acu)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evergage_acura_cert_Engagement__c</fullName>
        <description>Engagement score based on activity</description>
        <label>Evergage Engagement (Production - Acu)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evergage_acura_cert_Filters__c</fullName>
        <description>Evergage matching filters</description>
        <label>Evergage Filters (Production - Acu)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evergage_acura_cert_FirstActivity__c</fullName>
        <description>First activity with application</description>
        <label>Evergage First Visit (Production - Acu)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evergage_acura_cert_LastActivity__c</fullName>
        <description>Last activity with application</description>
        <label>Evergage Last Visit (Production - Acu)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evergage_acura_cert_Link__c</fullName>
        <description>Link to the Evergage page</description>
        <label>Evergage Link (Production - Acu)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Evergage_honda_cert_EngagementTrend__c</fullName>
        <description>Engagement trend based on activity</description>
        <label>Evergage Eng. Trend (Production - Hon)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evergage_honda_cert_Engagement__c</fullName>
        <description>Engagement score based on activity</description>
        <label>Evergage Engagement (Production - Hon)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evergage_honda_cert_Filters__c</fullName>
        <description>Evergage matching filters</description>
        <label>Evergage Filters (Production - Hon)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evergage_honda_cert_FirstActivity__c</fullName>
        <description>First activity with application</description>
        <label>Evergage First Visit (Production - Hon)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evergage_honda_cert_LastActivity__c</fullName>
        <description>Last activity with application</description>
        <label>Evergage Last Visit (Production - Hon)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evergage_honda_cert_Link__c</fullName>
        <description>Link to the Evergage page</description>
        <label>Evergage Link (Production - Hon)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Evergage_hondaauto_EngagementTrend__c</fullName>
        <description>Engagement trend based on activity</description>
        <label>Evergage Eng. Trend (Production - Hon)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evergage_hondaauto_Engagement__c</fullName>
        <description>Engagement score based on activity</description>
        <label>Evergage Engagement (Production - Hon)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evergage_hondaauto_Filters__c</fullName>
        <description>Evergage matching filters</description>
        <label>Evergage Filters (Production - Hon)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evergage_hondaauto_FirstActivity__c</fullName>
        <description>First activity with application</description>
        <label>Evergage First Visit (Production - Hon)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evergage_hondaauto_LastActivity__c</fullName>
        <description>Last activity with application</description>
        <label>Evergage Last Visit (Production - Hon)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evergage_hondaauto_Link__c</fullName>
        <description>Link to the Evergage page</description>
        <label>Evergage Link (Production - Hon)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Evergage_pwrsprt_EngagementTrend__c</fullName>
        <description>Engagement trend based on activity</description>
        <label>Evergage Eng. Trend (Production - Hon)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evergage_pwrsprt_Engagement__c</fullName>
        <description>Engagement score based on activity</description>
        <label>Evergage Engagement (Production - Hon)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evergage_pwrsprt_Filters__c</fullName>
        <description>Evergage matching filters</description>
        <label>Evergage Filters (Production - Hon)</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evergage_pwrsprt_FirstActivity__c</fullName>
        <description>First activity with application</description>
        <label>Evergage First Visit (Production - Hon)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evergage_pwrsprt_LastActivity__c</fullName>
        <description>Last activity with application</description>
        <label>Evergage Last Visit (Production - Hon)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Evergage_pwrsprt_Link__c</fullName>
        <description>Link to the Evergage page</description>
        <label>Evergage Link (Production - Hon)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Exterior_Color__c</fullName>
        <label>Exterior Color</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExternalLeadReference_TXT__c</fullName>
        <label>External Lead Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External IDs</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Lead_Reference_Number__c</fullName>
        <label>External Lead Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Lead_User_Identifier__c</fullName>
        <description>External User Identifier in the provider system. Formerly &quot;Source User CD&quot; in eShopping</description>
        <label>External Lead User Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederationIdentifier__c</fullName>
        <label>FederationIdentifier</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinanceAmountType_TXT__c</fullName>
        <label>Finance Amount Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinanceAmount_TXT__c</fullName>
        <label>Finance Amount</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinanceMethod_TXT__c</fullName>
        <label>Finance Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Details_TXT__c</fullName>
        <label>Financial Details</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fuel_Type_Code__c</fullName>
        <label>Fuel Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>G</fullName>
                    <label>Gasoline Vehicle</label>
                </value>
                <value>
                    <fullName>H</fullName>
                    <label>Hydrogen Fuel Cell Vehicle</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>Compressed Natural Gas Vehicle</label>
                </value>
                <value>
                    <fullName>E</fullName>
                    <label>Electric Vehicle</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>Plug-In Hybrid Vehicle Electricity</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Phone_Error_CD__c</fullName>
        <label>Home Phone Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Error_Description_TXT__c</fullName>
        <label>Phone Error Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HondaCurrentProductsOwned2_TXT__c</fullName>
        <label>Honda Current Products Owned 2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HondaCurrentProductsOwned_TXT__c</fullName>
        <label>Honda Current Products Owned</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HondaHighValueTrimlinePropensity_NUM__c</fullName>
        <label>Honda High Value Trimline Propensity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HondaOwnershipStatusHousehold_TXT__c</fullName>
        <label>Honda Ownership Status Household</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HondaOwnershipStatus_TXT__c</fullName>
        <label>Honda Ownership Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Salesforce ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <description>product image as sent from the website</description>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <description>display image for the product on Lead according to the Image url provide by the website</description>
        <formula>IMAGE(Image_URL__c, &quot;image&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interior_Color__c</fullName>
        <label>Interior Color</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>InventoryNumber_TXT__c</fullName>
        <label>Stock Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsDealerized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDealerized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsFirstName_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsFirstName</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Concierge_Process_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Concierge Process Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Duplicate_Similar_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Duplicate Similar Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_ECRM_Update_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is ECRM Update Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Enrichment_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Once enrichment done, this field will be True for conversion</description>
        <label>Is Enrichment Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_HELMS_Contact_Key__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked true if the Contact Key is made in HELMS instead of being received from ECRM.</description>
        <label>Is HELMS Contact Key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Location_Enrichment_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Location Enrichment Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Third_Party_Duplicate_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Third Party Duplicate Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTWT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>which stands for Light Weight</description>
        <label>LTWT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Launchbox_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Launchbox ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeadAdditionalInfos__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-1950 Story name.
Description: This is store the Offers XML Data.
Source System: Coming from Integration.
Integration: Yes.
Data Transformation: N/A.
Functional Definition: This will be Stored Offers Data.</description>
        <label>LeadAdditionalInfos</label>
        <length>118216</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeadCampaignName_TXT__c</fullName>
        <label>Lead Campaign Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadGrade_FLG__c</fullName>
        <formula>(Is_Enrichment_Update__c = true &amp;&amp; (NOT( ISBLANK( FirstName ))) &amp;&amp;( NOT( ISBLANK( LastName ))) &amp;&amp; (NOT(ISPICKVAL( Division_CD__c , &apos;&apos;)) &amp;&amp; (ValidEmail_FLG__c = TRUE || ValidPhoneNum_FLG__c = TRUE|| ValidMobile_FLG__c = TRUE ) &amp;&amp; PreferredDealerAccount_ID__c &lt;&gt; NULL &amp;&amp;
(ISPICKVAL( ValidName_TXT__c , &apos;&apos;)||ISPICKVAL( ValidName_TXT__c , &apos;Genuine&apos;)) &amp;&amp;
(ISPICKVAL( Address_Cache_Status__c , &apos;&apos;)||ISPICKVAL( Address_Cache_Status__c , &apos;Genuine&apos;))||
((ISPICKVAL( Email_Cache_Status__c , &apos;&apos;)||ISPICKVAL( Email_Cache_Status__c , &apos;Genuine&apos;))&amp;&amp;
(ISPICKVAL( ValidName_TXT__c , &apos;&apos;)||ISPICKVAL( ValidName_TXT__c , &apos;Genuine&apos;)) &amp;&amp;
NOT(ISPICKVAL( Address_Cache_Status__c , &apos;Genuine&apos;)))&amp;&amp;
(ISPICKVAL( Email_Cache_Status__c , &apos;&apos;)||ISPICKVAL( Email_Cache_Status__c , &apos;Genuine&apos;)) &amp;&amp; NOT( ISBLANK( LeadProvider_ID__c ) ) ) ) &amp;&amp; LeadProvider_ID__r.Enrichment__c = true &amp;&amp;
( (ISPICKVAL( Triggertypecode__c , &apos;Instant&apos;)) ||
( (ISPICKVAL( Triggertypecode__c , &apos;Future&apos;) || ISPICKVAL( Triggertypecode__c , &apos;FixedDate&apos;)) &amp;&amp; ( ISBLANK(LeadProvider_ID__r.Routing_Date_Termination__c ) || LeadProvider_ID__r.Routing_Date_Termination__c &gt; NOW()) &amp;&amp; ISBLANK( LeadProvider_ID__r.RoutingDate_DT__c ) &amp;&amp; TriggerSendbyDate_DT__c &lt;= NOW() ) ||
( (ISPICKVAL( Triggertypecode__c , &apos;Future&apos;) || ISPICKVAL( Triggertypecode__c , &apos;FixedDate&apos;)) &amp;&amp; ( ISBLANK(LeadProvider_ID__r.Routing_Date_Termination__c ) || LeadProvider_ID__r.Routing_Date_Termination__c &gt; NOW()) &amp;&amp; ISBLANK(TriggerSendbyDate_DT__c) &amp;&amp; NOT(ISBLANK( LeadProvider_ID__c )) &amp;&amp; NOT(ISBLANK( LeadProvider_ID__r.RoutingDate_DT__c ))&amp;&amp; LeadProvider_ID__r.RoutingDate_DT__c &lt;= NOW() ) ||
( (ISPICKVAL( Triggertypecode__c , &apos;Future&apos;) || ISPICKVAL( Triggertypecode__c , &apos;FixedDate&apos;)) &amp;&amp; ( ISBLANK(LeadProvider_ID__r.Routing_Date_Termination__c ) || LeadProvider_ID__r.Routing_Date_Termination__c &gt; NOW()) &amp;&amp; NOT(ISBLANK(TriggerSendbyDate_DT__c)) &amp;&amp; NOT(ISBLANK( LeadProvider_ID__c )) &amp;&amp; NOT(ISBLANK( LeadProvider_ID__r.RoutingDate_DT__c )) &amp;&amp; TriggerSendbyDate_DT__c &lt; LeadProvider_ID__r.RoutingDate_DT__c &amp;&amp; TriggerSendbyDate_DT__c &lt;= NOW() ) ||
( (ISPICKVAL( Triggertypecode__c , &apos;Future&apos;)|| ISPICKVAL( Triggertypecode__c , &apos;FixedDate&apos;)) &amp;&amp; ( ISBLANK(LeadProvider_ID__r.Routing_Date_Termination__c ) || LeadProvider_ID__r.Routing_Date_Termination__c &gt; NOW()) &amp;&amp; NOT(ISBLANK(TriggerSendbyDate_DT__c)) &amp;&amp; NOT(ISBLANK( LeadProvider_ID__c )) &amp;&amp; NOT(ISBLANK( LeadProvider_ID__r.RoutingDate_DT__c )) &amp;&amp; LeadProvider_ID__r.RoutingDate_DT__c &lt; TriggerSendbyDate_DT__c &amp;&amp; LeadProvider_ID__r.RoutingDate_DT__c &lt;= NOW() )

)</formula>
        <label>Lead Grade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadProvider_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lead Provider Name</inlineHelpText>
        <label>Lead Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Provider</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Lead Provider)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeadSafeID_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadScore_SCORE__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Age__c</fullName>
        <formula>TODAY()  -  DATEVALUE( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Coming_From_CRM__c</fullName>
        <label>Lead Coming From CRM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Conversion_Error__c</fullName>
        <description>This field being used in report</description>
        <formula>IF( ISPICKVAL(ValidName_TXT__c, &apos;Cache&apos;), &apos;Name Cache&apos;, IF( ISPICKVAL(ValidName_TXT__c, &apos;Reject&apos;), &apos;Name Reject&apos;, IF( ISPICKVAL( Email_Cache_Status__c , &apos;Cache&apos;), &apos;Email Cache&apos;, IF( ISPICKVAL(Email_Cache_Status__c, &apos;Reject&apos;), &apos;Email Reject&apos;, IF( ISPICKVAL( Address_Cache_Status__c , &apos;Cache&apos;), &apos;Address Cache&apos;, IF( ISPICKVAL(Address_Cache_Status__c, &apos;Reject&apos;), &apos;Address Reject&apos;, IF( ISPICKVAL( StatusReason_TXT__c , &apos;Unable to assign Dealer&apos;), &apos;Unable to assign Dealer&apos;, IF( ISPICKVAL(StatusReason_TXT__c, &apos;Lead Enrichment call error&apos;), &apos;Lead Enrichment call error&apos;, IF( ISPICKVAL(StatusReason_TXT__c, &apos;Pending&apos;), &apos;Pending&apos;, IF( ISPICKVAL(Status, &apos;New&apos;), &apos;New&apos;, &apos;&apos;)))
)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Conversion Error</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Grade_TXT__c</fullName>
        <label>Lead Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reject</fullName>
                </value>
                <value>
                    <fullName>Cache</fullName>
                </value>
                <value>
                    <fullName>Convert</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Group_ID__c</fullName>
        <externalId>true</externalId>
        <label>Lead Group ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Payload__c</fullName>
        <label>Lead Payload</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Provider__c</fullName>
        <label>Lead Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Power Equipment</fullName>
                </value>
                <value>
                    <fullName>Marine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_SF_ID__c</fullName>
        <label>Lead SF ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Submission_Date__c</fullName>
        <description>To load the date when the lead was submitted to the dealer.</description>
        <label>Lead Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LeadsourceOther_TXT__c</fullName>
        <label>Lead source Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Description_TXT__c</fullName>
        <label>Location Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location_Error_CD__c</fullName>
        <label>Location Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Error_Description_TXT__c</fullName>
        <label>Location Error Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location_Status_TXT__c</fullName>
        <label>Location Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSRP_AMT__c</fullName>
        <label>MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Make_TXT__c</fullName>
        <label>Make</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketable_FLG__c</fullName>
        <formula>AND(AND(ValidEmail_FLG__c = TRUE , NOT( ISBLANK( Email )), NOT(ISPICKVAL( Division_CD__c , &apos;&apos;))),
OR( LeadProvider_ID__r.Send_Invalid_Information_notification__c = true || LeadProvider_ID__r.Send_Product_Missing_Notification__c = true ||  LeadProvider_ID__r.Send_confirmation_interest_notification__c = true),
OR(
 ISBLANK(Model_TXT__c),(AND( ValidAddress_FLG__c = False, ISBLANK(PreferredDealerAccount_ID__c ) )),
(AND( ValidPhoneNum_FLG__c = False, ISPICKVAL(  ContactType_TXT__c , &apos;Home Phone&apos;)))
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Campaign_Name__c</fullName>
        <description>Marketing campaign that drove this lead.</description>
        <label>Marketing Campaign Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MiddlewareUUID__c</fullName>
        <externalId>true</externalId>
        <label>MiddlewareUUID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelDealerAccessoryPrice_AM__c</fullName>
        <label>Model Dealer Accessory Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ModelDestinationCharge_AM__c</fullName>
        <label>Model Destination Charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Model_Error_CD__c</fullName>
        <label>Model Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Error_Description_TXT__c</fullName>
        <label>Model Error Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Model_Group_Name__c</fullName>
        <description>Model Group Name to show the Model Group which will be used in Dashboard and Reports</description>
        <label>Model Group Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Model_ID__c</fullName>
        <label>Model ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_IMG__c</fullName>
        <label>Model Image</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Model_Name_NM__c</fullName>
        <label>Model Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_TXT__c</fullName>
        <label>Model</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Multiple_Lead_Providers__c</fullName>
        <label>Multiple Lead Providers</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NSX_Tech__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NSX Tech</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_NM__c</fullName>
        <label>Vin Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OdometerStatus_TXT__c</fullName>
        <label>Odometer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>unknown</fullName>
                </value>
                <value>
                    <fullName>rolledover</fullName>
                </value>
                <value>
                    <fullName>replaced</fullName>
                </value>
                <value>
                    <fullName>original</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OdometerUnits_TXT__c</fullName>
        <label>Odometer Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>kilometer</fullName>
                </value>
                <value>
                    <fullName>miles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Odometer_TXT__c</fullName>
        <label>Odometer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Options_TXT__c</fullName>
        <label>Lead Options</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderId__c</fullName>
        <description>For testing purpose, order to lead(Hdm to Helms)</description>
        <label>OrderId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherContacts_TXT__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Other Contacts</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OtherLeadProvider_TXT__c</fullName>
        <label>Other Lead Provider</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PECurrentProductsOwned_TXT__c</fullName>
        <label>PE Current Products Owned</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PEOwnershipStatusHousehold_TXT__c</fullName>
        <label>PE Ownership Status Household</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PEOwnershipStatus_TXT__c</fullName>
        <label>PE Ownership Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSPColorPreference_TXT__c</fullName>
        <label>Color Preference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSPCurrentProductsOwned2_TXT__c</fullName>
        <label>PSP Current Products Owned 2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PSPCurrentProductsOwned_TXT__c</fullName>
        <label>PSP Current Products Owned</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PSPOwnershipStatusHousehold_TXT__c</fullName>
        <label>PSP Ownership Status Household</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSPOwnershipStatus_TXT__c</fullName>
        <label>PSP Ownership Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Loyal</fullName>
                </value>
                <value>
                    <fullName>Very Loyal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pager__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <label>Pager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>